[gd_scene load_steps=4 format=2]

[ext_resource path="res://LifeBar.gd" type="Script" id=1]
[ext_resource path="res://image/gui_life.png" type="Texture" id=2]
[ext_resource path="res://image/gui_life2.png" type="Texture" id=3]

[node name="LifeBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Life1" type="Sprite" parent="."]
visible = false
position = Vector2( 20, 23 )
texture = ExtResource( 2 )

[node name="Life2" type="Sprite" parent="."]
visible = false
position = Vector2( 60, 23 )
texture = ExtResource( 2 )

[node name="Life3" type="Sprite" parent="."]
visible = false
position = Vector2( 100, 23 )
texture = ExtResource( 2 )

[node name="EmptyLife" type="Sprite" parent="."]
position = Vector2( 20, 23 )
texture = ExtResource( 3 )

[node name="EmptyLife2" type="Sprite" parent="."]
position = Vector2( 60, 23 )
texture = ExtResource( 3 )

[node name="EmptyLife3" type="Sprite" parent="."]
position = Vector2( 100, 23 )
texture = ExtResource( 3 )
